# loc-history

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
loc_history/: lib.py
